--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,26 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+
+
+# cypress
+/cypress/videos
+/cypress/screenshots
+
+# storybook
+/storybook-static
+
+# current stage
+/code-stages/meta.json
 next-env.d.ts
