--- a/package.json
+++ b/package.json
@@ -1,22 +1,59 @@
 {
-  "name": "jobs-app-nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
-    "@types/node": "20.3.3",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.7",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query-devtools": "^4.29.19",
+    "axios": "^1.4.0",
+    "framer-motion": "^10.12.18",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-error-boundary": "^4.0.10",
+    "react-hook-form": "^7.45.1",
+    "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@chakra-ui/storybook-addon": "^5.0.0",
+    "@mswjs/data": "^0.13.0",
+    "@storybook/addon-actions": "^7.0.24",
+    "@storybook/addon-essentials": "^7.0.24",
+    "@storybook/addon-interactions": "^7.0.24",
+    "@storybook/addon-links": "^7.0.24",
+    "@storybook/builder-webpack5": "^7.0.24",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^7.0.24",
+    "@storybook/testing-library": "^0.2.0",
+    "@testing-library/cypress": "^9.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/node": "20.3.3",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "babel-loader": "^9.1.2",
+    "cypress": "^12.16.0",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.7",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-storybook": "^0.6.12",
+    "fs-extra": "^11.1.1",
+    "husky": "^8.0.3",
+    "inquirer": "^9.2.7",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "lint-staged": "^13.2.3",
+    "msw": "^1.2.2",
+    "msw-devtools": "^1.0.2",
+    "prettier": "^2.8.8",
+    "start-server-and-test": "^2.0.0",
+    "ts-eager": "^2.0.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
+    "typescript": "5.1.6",
+    "webpack": "^5.88.1"
   }
 }
